# tru

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.claude/audits/: focusing-formats.md
.github/workflows/: ci.yml
cli/: Cargo.toml  main.rs
crates/field/: Cargo.toml
crates/field/src/: field.rs  lib.rs  operators.rs
crates/focusing/: Cargo.toml
crates/focusing/src/: csr.rs  focusing.rs  lib.rs
docs/: README.md  convergence.md  details.md  direct-inference.md  epistemic-markets.md  focus.md  honesty.md  incentives.md  markets.md  metrics.md  overview.md  tri-kernel.md
docs/explanation/: README.md  collective-focus-theorem.md  convergence.md  graph-native-transformer.md  honesty.md  incentives.md  knowledge-economy.md  markets.md  overview.md  valence.md
docs/explanations/: graph-native-transformer.md  valence.md
docs/terms/: README.md  attention.md  conviction.md  coupling.md  focus.md  inhibition.md  karma.md  syntropy.md  true-false problem.md  true.md  valence.md
docs/terms/truth/: serum.md  two kinds of knowledge.md  void.md
docs/truth/: cost.md  coupling.md  false.md  honesty.md  market.md  serum.md  standard inference.md  valence.md
graph/: bayesian truth serum.md  honesty.md  inversely coupled bonding surface.md  karma.md  knowledge economy.md  learning incentives.md  market inhibition.md  rewards.md  serum.md  syntropy.md
reference/: focus-flow.md  truth-scoring.md
roadmap/: README.md  focus-dynamics.md  implementation.md  motif-awareness.md
rs/: Cargo.toml  arithmetic.rs  attribution.rs  lib.rs  rewards.rs  truth_scoring.rs  vocab.rs
rs/examples/: gen_demo.rs  superadditivity.rs
rs/focusing/: csr.rs  focusing.rs  impulse.rs  measures.rs  mod.rs  operators.rs  spectral.rs
rs/graph/: frontmatter.rs  reader.rs  record.rs
rs/model/: mod.rs  writer.rs
rs/pass/: arch.rs  attn.rs  compile.rs  dialect.rs  embed.rs  index.rs  mlp.rs  mod.rs  norm.rs  svd.rs
rs/tests/: honesty_loop.rs  smoke.rs
specs/: README.md  arithmetic.md  attention.md  axon.md  clifford.md  convergence.md  conviction.md  ct0.md  ct1.md  cyberank.md  field.md  focus-flow.md  focus.md  focusing.md  impulse.md  knowledge-economy.md  model.md  render.md  rewards.md  strong-truthfulness.md  superadditivity.md  syntropy.md  tri-kernel.md  truth-scoring.md  valence.md  vocab.md  will.md
src/: error.rs  lib.rs  main.rs
src/graph/: mod.rs  reader.rs  record.rs
src/model/: writer.rs
src/pass/: mod.rs
tests/: smoke.rs
