[package]
name = "tru"
version = "0.1.0"
edition = "2021"
description = "model compilation — compile cybergraph snapshots into transformer checkpoints (CT-1)"
license = "Apache-2.0"
repository = "https://github.com/cyberia-to/tru"

[[bin]]
name = "tru"
path = "src/main.rs"

[lib]
name = "tru"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
memmap2 = "0.9"
cyber-hemera = { path = "../../hemera/rs" }  # Poseidon2 over Goldilocks — CIDs and RNG seeds
rand_chacha = "0.3"
rand = "0.8"

# Linear algebra dependencies land in phase 2 (embed pass):
# sprs = "0.11"
# ndarray = "0.16"
# nalgebra = "0.33"
