# ---
# tags: cyber, tru, config
# crystal-type: source
# crystal-domain: cyber
# ---
[workspace]
members = ["rs", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Cyber"
repository = "https://github.com/cyberia-to/tru"

# Cross-repo dependencies land here as phases need them:
# cyber-hemera = { path = "../hemera/rs" }   # phase 1 — particle ids, RNG seeds
# rand_chacha, rand                          # phase 1 — reproducible sampling
# nalgebra-style fixed-point kernels         # phase 2 — embed/attention passes
