# ---
# tags: cyber, tru, config
# crystal-type: source
# crystal-domain: cyber
# ---
[package]
name = "tru"
description = "tru — convergence VM: focusing (φ*) and CT-0 model compilation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "tru"
path = "lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
memmap2 = "0.9"
